--- a/stayle.css
+++ b/stayle.css
@@ -9,7 +9,7 @@
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 4px 8px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease;
+  transition: 0.3s;
   &:hover {
     background-color: #45a049;
     box-shadow: 6px 12px rgba(0, 0, 0, 0.3);
